# adk-python

./: pyproject.toml
.github/: header-checker-lint.yml
contributing/samples/bigquery_mcp/: agent.py
contributing/samples/hello_world/: agent.py
contributing/samples/mcp_toolset_auth/: agent.py  main.py  oauth_mcp_server.py
contributing/samples/plugin_debug_logging/: agent.py
contributing/samples/sandbox_computer_use/: agent.py  main.py
src/google/adk/: runners.py
src/google/adk/agents/: llm_agent.py
src/google/adk/auth/: auth_credential.py  auth_handler.py  credential_manager.py  oauth2_credential_util.py
src/google/adk/auth/exchanger/: oauth2_credential_exchanger.py
src/google/adk/cli/utils/: gcp_utils.py
src/google/adk/code_executors/: built_in_code_executor.py
src/google/adk/evaluation/simulation/: llm_backed_user_simulator.py
src/google/adk/flows/llm_flows/: contents.py
src/google/adk/integrations/agent_identity/: gcp_auth_provider.py
src/google/adk/integrations/vmaas/: __init__.py  sandbox_client.py  sandbox_computer.py
src/google/adk/optimization/: local_eval_sampler.py
src/google/adk/plugins/: reflect_retry_tool_plugin.py
src/google/adk/sessions/: base_session_service.py
src/google/adk/skills/: skill_registry.py
src/google/adk/tools/: skill_toolset.py  url_context_tool.py
src/google/adk/tools/environment/: _environment_toolset.py  _tools.py
src/google/adk/tools/mcp_tool/: mcp_thread_utils.py  mcp_tool.py  mcp_toolset.py
src/google/adk/tools/retrieval/: vertex_ai_rag_retrieval.py
src/google/adk/utils/: model_name_utils.py  output_schema_utils.py
tests/integration/integrations/agent_identity/: test_2lo_flow.py  test_3lo_flow.py
tests/unittests/: test_runners.py
tests/unittests/agents/: test_llm_agent_output_save.py  test_llm_agent_streaming_output.py
tests/unittests/auth/: test_auth_handler.py  test_credential_manager.py
tests/unittests/auth/exchanger/: test_oauth2_credential_exchanger.py
tests/unittests/cli/: test_cli_feature_options.py
tests/unittests/cli/utils/: test_gcp_utils.py
tests/unittests/evaluation/simulation/: test_llm_backed_user_simulator.py
tests/unittests/integrations/agent_identity/: test_gcp_auth_provider.py
tests/unittests/integrations/vmaas/: test_sandbox_client.py  test_sandbox_computer.py
tests/unittests/models/: test_litellm_import.py
tests/unittests/optimization/: local_eval_sampler_test.py
tests/unittests/plugins/: test_debug_logging_plugin.py  test_reflect_retry_tool_plugin.py
tests/unittests/tools/: BUILD  test_environment_toolset.py  test_load_memory_tool.py  test_skill_toolset.py
tests/unittests/tools/mcp_tool/: test_session_context.py
tests/unittests/tools/retrieval/: test_base_retrieval_tool.py
tests/unittests/utils/: test_google_client_headers.py  test_model_name_utils.py
